--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   </div>
 
   <script>
-    const serverIP = "robert-fairly.gl.joinmc.link";
+    const serverIP = "play.applemc.fun";
     const serverPort = "";
 
     async function fetchStatus() {
