--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>GreezSMP Status</title>
+  <title>SeasonCraft Status 24/7</title>
   <style>
     * { box-sizing: border-box; }
     body {
@@ -71,8 +71,8 @@
   </div>
 
   <script>
-    const serverIP = "play.applemc.fun";
-    const serverPort = "";
+    const serverIP = "play.seasoncraft.fun:19132";
+    const serverPort = "19132";
 
     async function fetchStatus() {
       const statusDiv = document.getElementById("status");
