--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   </style>
 </head>
 <body>
-  <h1>GreezSMP</h1>
+  <h1>SeasonCraft Status 24/7</h1>
   <h2>Server Status Checker</h2>
   <div class="glass-card">
     <div id="status" class="status">Loading status...</div>
