--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
   <script>
     const serverIP = "play.seasoncraft.fun:19132";
-    const serverPort = "19132";
+    const serverPort = "";
 
     async function fetchStatus() {
       const statusDiv = document.getElementById("status");
