--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>SeasonCraft Status 24/7</title>
+  <title>SeasonCraft Status</title>
   <style>
     * { box-sizing: border-box; }
     body {
@@ -63,7 +63,7 @@
   </style>
 </head>
 <body>
-  <h1>SeasonCraft Status 24/7</h1>
+  <h1>SeasonCraft Status</h1>
   <h2>Server Status Checker</h2>
   <div class="glass-card">
     <div id="status" class="status">Loading status...</div>
